<resources>
    <string name="app_name">Wash &amp; Wear</string>
    <string name="tagline">Roach Solutions</string>
    <string name="welcome">Welcome</string>
    <string name="welcomeNote">Please login with your information</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forgot Password</string>
    <string name="login">Login\n</string>
    <string name="create_account">Create Account\n</string>
    <string name="fullname">Fullname</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">"Regester "</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="click_here">Click Here</string>
    <string name="admin_login">Admin Login</string>
    <string name="todo">TODO</string>
    <string name="add_services">Add Services</string>
    <string name="cloth_type">Cloth Type</string>
    <string name="price">Price</string>
    <string name="service_type">Service Type</string>
    <string name="na">NA</string>
    <string name="add_service">Add Service</string>
    <string name="total_orders">Total Orders</string>
    <string name="active_users">Active Users</string>
    <string name="view_orders">View Orders</string>
    <string name="view_feedback">View Feedback</string>
    <string name="view_service">View Service</string>
    <string name="logout">Logout</string>
    <string name="enter_card_details">Enter Card Details</string>
    <string name="card_number">Card Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="cvv">CVV</string>
    <string name="pay_now">Pay Now</string>
    <string name="save_card_info_for_quick_payment_in_future">Save card info for quick payment in future.</string>
    <string name="TODO">TODO</string>
    <string name="your_cart_is_empty">Your Cart is Empty</string>
    <string name="checkout">Checkout</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="user_address_here">User Address here</string>
    <string name="total">Total</string>
    <string name="u20b9">₹</string>
    <string name="proceed">Proceed</string>
    <string name="overview">Overview</string>
    <string name="name">Name:</string>
    <string name="phone">Phone:</string>
    <string name="address">Address:</string>


    <string-array name="service_type">
        <item>Iron</item>
        <item>Wash &amp; Fold</item>
        <item>Wash &amp; Iron</item>
        <item>Wash &amp; Iron &amp; Fold</item>
        <item>Wash &amp; Iron &amp; Fold &amp; Wax</item>
        <item>Dry Clean</item>
        <item>Wash &amp; Dry Clean</item>
        <item>Wash &amp; Dry Clean &amp; Fold</item>
        <item>Wash &amp; Dry Clean &amp; Fold &amp; Wax</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pincode">Pincode:</string>
    <string name="pickup_time">Pickup Time:</string>
    <string name="delivery_time">Delivery Time:</string>
    <string name="confirm">Confirm</string>
    <string name="dry_cleaning_service">Dry Cleaning Service</string>
    <string name="suits">Suits</string>
    <string name="rs_35_00">Rs. 35.00</string>
    <string name="blazer">Blazer</string>
    <string name="rs_45_00">Rs. 45.00</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="s">Address</string>
    <string name="city">City</string>
    <string name="preferred_pickup_time">Preferred Pickup Time</string>
    <string name="click_to_select_pickup_time">Click to select pickup time</string>
    <string name="preferred_delivery_time">Preferred Delivery Time</string>
    <string name="click_to_select_delivery_time">Click to select Delivery time</string>
    <string name="opps">Opps!</string>
    <string name="sorry_to_see_you_here">Sorry to see you here!</string>
    <string name="enter_registered_email">Enter Registered Email</string>
    <string name="request_link">Request Link</string>
    <string name="iron_service">Iron Service</string>
    <string name="shirt">Shirt</string>
    <string name="rs_12_00">Rs. 12.00</string>
    <string name="trouser">Trouser</string>
    <string name="rs_10_00">Rs. 10.00</string>
    <string name="skirt">Skirt</string>
    <string name="t_shirt">T-Shirt</string>
    <string name="jeans">Jeans</string>
    <string name="version_1_0_0">Version 1.0.0</string>
    <string name="payment_option">Payment Option</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="online_payment">Online Payment</string>
    <string name="card_payment">Card Payment</string>
    <string name="cash_on_delivery">Cash on delivery</string>
    <string name="please_register_with_your_information">Please register with your Information</string>
    <string name="complete_profile">Complete Profile</string>
    <string name="there_is_no_order_for_now">There is no order for now</string>
    <string name="there_is_no_feedback_for_now">There is no Feedback for now</string>
    <string name="wash_and_iron_service">Wash and Iron Service</string>
    <string name="towel">Towel</string>
    <string name="bedsheet">Bedsheet</string>
    <string name="pillowcase">Pillowcase</string>
    <string name="blanket">Blanket</string>
    <string name="carpet">Carpet</string>
    <string name="rs_15_00">Rs. 15.00</string>
    <string name="casuals">Casuals</string>
    <string name="service_name">Service Name</string>
    <string name="u20b90">₹</string>
    <string name="jj">/-</string>
    <string name="_1">1</string>
    <string name="total_u20b9">Total: ₹</string>
    <string name="kk">/-</string>
    <string name="feedback">Feedback</string>
    <string name="user_name">User Name</string>
    <string name="rating">Rating:</string>
    <string name="user_email">User Email:</string>
    <string name="user_phone">User Phone:</string>
    <string name="person_email">Person Email</string>
    <string name="person_name">Person Name</string>
    <string name="sss">Phone:</string>
    <string name="addresss">Address:</string>
    <string name="citys">City:</string>
    <string name="pincodes">Pincode:</string>
    <string name="pickup_times">Pickup Time:</string>
    <string name="delivery_times">Delivery Time:</string>
    <string name="office_address_here">Office Address Here</string>
    <string name="golaundary_gmail_com">golaundary@gmail.com</string>
    <string name="_91_9876543210">+91-9876543210</string>
    <string name="rate_your_experience">Rate Your Experience</string>
    <string name="are_you_satisfied_with_the_service">Are you satisfied with the service?</string>
    <string name="what_can_be_improved_any_suggestions">What can be improved? (Any suggestions)</string>
    <string name="submit">Submit</string>
    <string name="next" />
    <string name="lorem_ipsum" />
    <string name="golaundary_help">GoLaundary Help</string>
    <string name="_1_registration">1. Registration:</string>
    <string name="to_create_a_new_account_follow_these_steps">To create a new account, follow these steps:</string>
    <string name="_1_go_to_the_login_page_by_clicking_on_the_login_or_sign_in_button_on_the_application_s_homepage">1. Go to the login page by clicking on the Login or Sign In button on the application\'s homepage.</string>
    <string name="_2_enter_your_registered_email_address_and_password_in_the_respective_fields">2. Enter your registered email address and password in the respective fields.</string>
    <string name="_3_click_on_the_login_or_sign_in_button_to_submit_the_login_form">3. Click on the Login or Sign In button to submit the login form.</string>
    <string name="_2_login">2. Login:</string>
    <string name="to_log_in_to_your_account_follow_these_steps">To log in to your account, follow these steps:</string>
    <string name="_1_go_to_the_login_page_by_clicking_on_the_login_or_sign_in_button_on_the_application_s_homepages">1. Go to the login page by clicking on the Login or Sign In button on the application\'s homepage.</string>
    <string name="_2_enter_your_registered_email_address_and_password_in_the_respective_fieldss">2. Enter your registered email address and password in the respective fields.</string>
    <string name="_3_click_on_the_login_or_sign_in_button_to_submit_the_login_forms">3. Click on the Login or Sign In button to submit the login form.</string>
    <string name="_3_forgot_password">3. Forgot Password:</string>
    <string name="if_you_forgot_your_password_you_can_reset_it_using_the_following_steps">If you forgot your password, you can reset it using the following steps:</string>
    <string name="_1_go_to_the_forgot_pwd_page_by_clicking_on_the_forgot_password_button_on_the_application_s_homepage">1. Go to the forgot pwd page by clicking on the Forgot Password button on the application\'s homepage.</string>
    <string name="_2_enter_your_registered_email_address_in_the_respective_fields">2. Enter your registered email address in the respective fields.</string>
    <string name="_3_click_on_the_request_button_to_recive_reset_link">3. Click on the Request Button to recive Reset Link.</string>
    <string name="additional_assistance">Additional Assistance:</string>
    <string name="if_you_encounter_any_issues_or_have_questions_feel_free_to_contact_our_support_team">If you encounter any issues or have questions, feel free to contact our support team.</string>
    <string name="click_to_update_address">Click to update address</string>
    <string name="discover">Discover</string>
    <string name="laundry_service">Laundry Service</string>
    <string name="choose_services">Choose Services</string>
    <string name="ironing">Ironing</string>
    <string name="wash_and_iron" />
    <string name="dry_cleaning">Dry Cleaning</string>
    <string name="recommended">Recommended</string>
    <string name="there_is_no_order_for_nows">There is no order for now</string>
    <string name="view_orderss">View Orders</string>
    <string name="previous">Previous</string>
    <string name="title">Title</string>
    <string name="_0">$0</string>
    <string name="logouts">Logout</string>
    <string name="order_id">Order ID</string>
    <string name="order_name">Order Name</string>
    <string name="order_address">Order Address:</string>
    <string name="order_date">Order Date:</string>
    <string name="product_qty">Product Qty:</string>
    <string name="order_status">Order Status:</string>
    <string name="service_cloth">Service Cloth</string>
    <string name="service_cloths">Service Cloth</string>
    <string name="_2">2</string>
</resources>