<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:padding="@dimen/_10ssp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_services"
        android:textSize="@dimen/_16sdp"
        android:fontFamily="@font/poppins_light"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.7"
        android:layout_marginTop="@dimen/_25ssp"
        android:text="@string/cloth_type"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/serviceCloth"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        app:endIconMode="clear_text"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.7"
        android:layout_marginTop="@dimen/_5ssp"
        android:text="@string/price"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/servicePrice"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        app:endIconMode="clear_text"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.7"
        android:layout_marginTop="@dimen/_5ssp"
        android:text="@string/service_type"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/serviceTypeSpinner"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_4ssp"
        android:layout_height="wrap_content"
        android:background="@drawable/spinner_bg"
        android:entries="@array/service_type" />

    <TextView
        android:id="@+id/serviceTypeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:fontFamily="@font/poppins_light"
        android:text="@string/na"
        android:visibility="gone"
        android:textSize="@dimen/_10sdp" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:id="@+id/addServiceButton"
        android:layout_height="wrap_content"
        android:text="@string/add_service"
        android:layout_marginTop="@dimen/_25ssp"
        android:backgroundTint="@color/primaryDark"
        app:cornerRadius="@dimen/_12ssp"/>

</LinearLayout>