<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/_16ssp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/rate_your_experience"
        android:textSize="@dimen/_16ssp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/are_you_satisfied_with_the_service"
        android:textSize="@dimen/_10ssp" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8ssp"
        android:numStars="5"
        android:rating="0"

        android:stepSize="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15ssp"
        android:alpha="0.7"
        android:text="@string/what_can_be_improved_any_suggestions"
        android:fontFamily="@font/poppins_light"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/feedbackField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:endIconMode="clear_text"
        app:hintEnabled="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/submit"
        android:layout_marginTop="@dimen/_35sdp"
        android:id="@+id/submitButton"
        android:backgroundTint="@color/primaryDark"
        app:cornerRadius="@dimen/_12sdp" />

</LinearLayout>