<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:background="@color/primaryDark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="28dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold" />


        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            app:cardCornerRadius="28dp"
            app:cardUseCompatPadding="true">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="28dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/opps"
                        android:textColor="@color/primaryDark"
                        android:textSize="26sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.7"
                        android:text="@string/sorry_to_see_you_here" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="30dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.7"
                        android:text="@string/enter_registered_email"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/emailForgot"
                        android:layout_marginTop="2dp"
                        app:endIconMode="clear_text"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:id="@+id/requestLinkButton"
                        android:backgroundTint="@color/primaryDark"
                        android:layout_marginTop="@dimen/_25ssp"
                        android:text="@string/request_link"
                        app:cornerRadius="@dimen/_12sdp" />


                </LinearLayout>
            </ScrollView>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</RelativeLayout>